--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
 	"scripts": {
 		"dev": "NODE_ENV=development node server/index.js",
 		"build": "vite build && vite build --ssr src/entry-server.jsx",
+		"build:static": "vite build",
 		"start": "NODE_ENV=production node server/index.js",
 		"clean": "rm -rf dist node_modules/.cache",
 		"lint": "biome lint .",
-		"format": "biome format . --write"
+		"format": "biome format . --write",
+		"predeploy": "GITHUB_PAGES=true npm run build:static",
+		"deploy": "gh-pages -d dist/client",
+		"vercel-build": "npm run build"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.13.0",
@@ -45,6 +49,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "^2.2.4",
 		"@vitejs/plugin-react": "^5.0.0",
+		"gh-pages": "^6.3.0",
 		"vite": "^7.1.5"
 	},
 	"engines": {
