Added admin dashboard

--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
 		"@mui/icons-material": "^7.3.2",
 		"@mui/material": "^7.3.2",
 		"@mui/utils": "^7.3.2",
+		"@mui/x-date-pickers": "^8.19.0",
 		"axios": "^1.13.2",
 		"bcryptjs": "^3.0.2",
 		"compression": "^1.8.1",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
+		"date-fns": "^4.1.0",
 		"express": "^5.0.0",
 		"helmet": "^7.1.0",
 		"jsonwebtoken": "^9.0.2",
