--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,14 @@ dist-ssr
 # Environment variables
 .env
 .env.local
+.env.development
 .env.development.local
+.env.test
 .env.test.local
+.env.production
 .env.production.local
+.env.vercel
+!.env.example
 
 # Editor directories and files
 .vscode/*
