--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"date-fns": "^4.1.0",
+		"dotenv": "^17.2.3",
 		"express": "^5.0.0",
 		"helmet": "^7.1.0",
 		"jsonwebtoken": "^9.0.2",
@@ -52,6 +53,7 @@
 		"@biomejs/biome": "^2.2.4",
 		"@vitejs/plugin-react": "^5.0.0",
 		"gh-pages": "^6.3.0",
+		"vercel": "^48.11.0",
 		"vite": "^7.1.5"
 	},
 	"engines": {
