--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,20 @@
 {
+	"version": 2,
 	"buildCommand": "npm run build",
 	"outputDirectory": "dist/client",
 	"devCommand": "npm run dev",
 	"installCommand": "npm install",
 	"framework": null,
+	"functions": {
+		"api/index.js": {
+			"memory": 1024,
+			"maxDuration": 30
+		}
+	},
 	"rewrites": [
 		{
-			"source": "/(.*)",
-			"destination": "/api/ssr"
+			"source": "/api/:path*",
+			"destination": "/api/index.js"
 		}
 	]
 }
